change some category on home page

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,10 +17,10 @@
                 GYM 💪
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">GYM men's</a>
-                <a href="" class="dropdown-item">WORKOUT men's</a>
-                <a href="" class="dropdown-item">GYM women's</a>
-                <a href="" class="dropdown-item">WORKOUT women's</a>
+                <a href="" class="dropdown-item">GYM Men's</a>
+                <a href="" class="dropdown-item">GYM Women's</a>
+                <a href="" class="dropdown-item">WORKOUT Men's</a>
+                <a href="" class="dropdown-item">WORKOUT Women's</a>
             </div>
         </li>
 
