Added product pictures

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,10 +5,10 @@
                 All Products
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">By Price</a>
-                <a href="" class="dropdown-item ">By Rating</a>
-                <a href="" class="dropdown-item ">By Category</a>
-                <a href="" class="dropdown-item">All Products</a>
+                <a href="" class="dropdown-item">BY PRICE</a>
+                <a href="" class="dropdown-item">BY RATING</a>
+                <a href="" class="dropdown-item">BY CATEGORY</a>
+                <a href="" class="dropdown-item">ALL PRODUCTS</a>
             </div>
         </li>
 
@@ -17,10 +17,10 @@
                 GYM 💪
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">GYM Men's</a>
-                <a href="" class="dropdown-item">GYM Women's</a>
-                <a href="" class="dropdown-item">WORKOUT Men's</a>
-                <a href="" class="dropdown-item">WORKOUT Women's</a>
+                <a href="" class="dropdown-item"><strong>GYM MEN'S</strong></a>
+                <a href="" class="dropdown-item">GYM WOMEN'S</a>
+                <a href="" class="dropdown-item">OUTDOOR WORKOUT</a>
+                <a href="" class="dropdown-item">ALL FOR WORKOUT</a>
             </div>
         </li>
 
@@ -31,7 +31,7 @@
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
                 <a href="" class="dropdown-item">MMA</a>
                 <a href="" class="dropdown-item">BOX</a>
-                <a href="" class="dropdown-item">All for FIGHTERS</a>
+                <a href="" class="dropdown-item">ALL FOR FIGHTERS</a>
             </div>
         </li>
 
@@ -40,10 +40,10 @@
                 Special Offers 🔥
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
-                <a href="" class="dropdown-item">All Specials</a>
+                <a href="" class="dropdown-item"><strong>NEW ARRIVALS</strong></a>
+                <a href="" class="dropdown-item">DEALS</a>
+                <a href="" class="dropdown-item">CLEARANCE</a>
+                <a href="" class="dropdown-item">All SPECIALS</a>
             </div>
         </li>
     </ul>
