--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,7 +8,7 @@
                 <a href="" class="dropdown-item">BY PRICE</a>
                 <a href="" class="dropdown-item">BY RATING</a>
                 <a href="" class="dropdown-item">BY CATEGORY</a>
-                <a href="" class="dropdown-item">ALL PRODUCTS</a>
+                <a href="{% url 'products' %}" class="dropdown-item">ALL PRODUCTS</a>
             </div>
         </li>
 
