--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,11 +38,6 @@ body {
     color: white;
 }
 
-.btn-black {
-    background: black;
-    color: white;
-}
-
 .btn-outline-black {
     background: white;
     color: black !important;
@@ -108,6 +103,22 @@ a.category-badge>span.badge:hover {
     cursor: pointer;
 }
 
+/* ------------------------------- bootstrap toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
 
 /* -------------------------------- Media Queries */
 
