--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
-<!-- {% load static %} -->
-{% load 404.css%}
+{% load static %}
 {% block content %}
 <div class="container header-container">
     <div class="row">
@@ -11,7 +10,7 @@
     <div class="row h-100">
         <div class="col-7 col-md-6 my-auto">
             <h1 class="display-4 logo-font text-404">
-                The page you are looking for isn't available
+                The page you are looking for isn't available 🙈🙉🙊
             </h1>
             <div class="my-5">
                 <h4>
