Added sitemap.xml and robots.txt

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -24,7 +24,7 @@
                 GYM 💪
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="{% url 'products' %}?category=gym_man" class="dropdown-item"><strong>GYM MEN'S</strong></a>
+                <a href="{% url 'products' %}?category=gym_man" class="dropdown-item">GYM MEN'S</a>
                 <a href="{% url 'products' %}?category=gym_women" class="dropdown-item">GYM WOMEN'S</a>
                 <a href="{% url 'products' %}?category=workout" class="dropdown-item">OUTDOOR WORKOUT</a>
                 <a href="{% url 'products' %}?category=gym_man,workout,gym_women" class="dropdown-item">ALL FOR
