Added description and keywords

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="direction" content="Enhance your fitness journey with premium gym and sports gloves at Grip.
+        From full-finger workout gloves to MMA and boxing gloves,
+        our high-quality products cater to both men and women, ensuring optimal performance.">
+    <meta name="keywords" content="gym gloves, workout gloves, best gym gloves, mma gloves,
+        boxing gloves, crossfit gloves, fitness gloves, training gloves, weightlifting gloves,
+        men's gym gloves, women's gym gloves, sparing gloves, premium workout gloves, golf swing gloves">
     {% endblock %}
 
     {% block extra_meta %}
@@ -40,7 +46,7 @@
     {% block extra_js %}
     {% endblock %}
 
-    <title>GRIP e-shop{% block extra_title %}{% endblock %}</title>
+    <title>GRIP{% block extra_title %}{% endblock %}</title>
 </head>
 
 <body>
