--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,8 @@
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="logo-font text-black my-0"><strong>Grip E-shop</strong></h2>
+                    <h2 class="logo-font text-black my-0"><strong>Grip E-shop
+                        </strong></h2>
                 </a>
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
@@ -160,6 +161,33 @@
     </script>
     {% endblock %}
 
+
+    <!-- Footer -->
+    <footer class="container-wrapper text-white">
+        <div class="container quotes-container content-container">
+            <section class="footer">
+                <div class="row">
+                    <div class="col-12 page-header mb-4">
+                        <h2 class="text-uppercase">Stay in touch:</h2>
+                        <hr class="block-divider block-divider--short">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <h3>Social</h3>
+                        <p>Keep up to date with all our latest offers</p>
+                        <a href="https://www.facebook.com/profile.php?id=61555501545729" target="_blank"><i class="fab fa-facebook-square"></i> Follow us on Facebook!</a>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <h2>Subscribe!</h2>
+                        <p>Get exclusive offers and discount codes by subscribing to our monthly newsletter</p>
+                        <!-- Mailchimp signup form here -->
+                    </div>
+                </div>
+            </section>
+        </div>
+    </footer>
+    <!-- /.footer -->
 
 </body>
 
