--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -50,8 +50,8 @@
                 Special Offers 🔥
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item"><strong>NEW
-                        ARRIVALS</strong></a>
+                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">NEW
+                        ARRIVALS</a>
                 <a href="{% url 'products' %}?category=deals" class="dropdown-item">DEALS</a>
                 <a href="{% url 'products' %}?category=clearance" class="dropdown-item">CLEARANCE</a>
                 <a href="{% url 'products' %}?category=clearance,deals,new_arrivals" class="dropdown-item">All
