--- a/static/css/base.css
+++ b/static/css/base.css
@@ -138,6 +138,8 @@ input[name='q']::placeholder {
 
 footer {
     background-color: #000;
+    font: 14px Helvetica, Arial, sans-serif;
+    padding-top: 10px;
 }
 
 /* Convenience classes - colors copied from Bootstrap */
@@ -335,4 +337,13 @@ footer {
     .decrement-qty {
         padding: .25rem .5rem !important;
     }
+}
+
+/* Mailchimp */
+#mc_embed_signup {
+    background: #fff;
+    clear: left;
+    font: 14px Helvetica, Arial, sans-serif;
+    width: 600px;
+    padding-top: 1%;
 }
