--- a/templates/base.html
+++ b/templates/base.html
@@ -179,6 +179,12 @@
                         <p>Keep up to date with all our latest offers</p>
                         <a href="https://www.facebook.com/profile.php?id=61555501545729" target="_blank"><i
                                 class="fab fa-facebook-square"></i> Follow us on Facebook!</a>
+                        <hr>
+                        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i> Follow
+                            us on X!</a>
+                        <hr>
+                        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square"></i>
+                            Follow us on Instagram!</a>
                     </div>
                     <div class="col-12 col-md-6">
                         <h2>Subscribe!</h2>
@@ -191,10 +197,11 @@
                                     class="validate" target="_blank">
                                     <div id="mc_embed_signup_scroll">
                                         <h2 class="text-black">Subscribe</h2>
-                                        <div class="indicates-required text-black"><span class="asterisk">*</span> indicates
+                                        <div class="indicates-required text-black"><span class="asterisk">*</span>
+                                            indicates
                                             required</div>
-                                        <div class="mc-field-group text-black"><label for="mce-EMAIL">Email Address <span
-                                                    class="asterisk">*</span></label><input type="email" name="EMAIL"
+                                        <div class="mc-field-group text-black"><label for="mce-EMAIL">Email Address
+                                                <span class="asterisk">*</span></label><input type="email" name="EMAIL"
                                                 class="required email" id="mce-EMAIL" required="" value=""><span
                                                 id="mce-EMAIL-HELPERTEXT" class="helper_text"></span></div>
                                         <div id="mce-responses" class="clear foot">
