--- a/static/css/base.css
+++ b/static/css/base.css
@@ -337,6 +337,13 @@ footer {
     .decrement-qty {
         padding: .25rem .5rem !important;
     }
+
+    footer {
+        background-color: #000;
+        font: 14px Helvetica, Arial, sans-serif;
+        padding-top: 10px;
+    }
+
 }
 
 /* Mailchimp */
