Creating blog app, models, url, folders

--- a/templates/base.html
+++ b/templates/base.html
@@ -234,6 +234,10 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-12">
+                        <a href="https://www.termsfeed.com/live/9859ad1d-04db-4615-bd66-3e53d4ca5354"
+                            target="_blank">Privacy Policy</a>
+                    </div>
                 </div>
             </section>
         </div>
