--- a/static/css/base.css
+++ b/static/css/base.css
@@ -139,7 +139,7 @@ input[name='q']::placeholder {
 footer {
     background-color: #000;
     font: 14px Helvetica, Arial, sans-serif;
-    padding-top: 10px;
+    /* padding-top: 10px; */
 }
 
 /* Convenience classes - colors copied from Bootstrap */
@@ -338,12 +338,6 @@ footer {
         padding: .25rem .5rem !important;
     }
 
-    footer {
-        background-color: #000;
-        font: 14px Helvetica, Arial, sans-serif;
-        padding-top: 10px;
-    }
-
 }
 
 /* Mailchimp */
@@ -352,5 +346,4 @@ footer {
     clear: left;
     font: 14px Helvetica, Arial, sans-serif;
     width: 600px;
-    padding-top: 1%;
 }
