--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -34,6 +34,7 @@
         {% if request.user.is_authenticated %}
         {% if request.user.is_superuser %}
         <a href="{% url 'account_logout' %}" class="dropdown-item">Product Management</a>
+        <a href="{% url 'post_create' %}" class="dropdown-item">Post Management</a>
         {% endif %}
         <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
         <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
