--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -65,7 +65,7 @@
                 BLOG
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="{% url 'blog' %}" id="blog-link" class="dropdown-item">NEW BLOG</a>
+                <a href="{% url 'blog' %}" id="blog-link" class="dropdown-item">RELATED ARTICLES</a>
             </div>
         </li>
     </ul>
