Creating template for updating user and adding profile picture

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -24,57 +24,84 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-lg-6">
-            <p class="text-muted">Default Delivery Information</p>
-            <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
-            </form>
-        </div>
-        <div class="col-12 col-lg-6">
-            <p class="text-muted">Order History</p>
-            <div class="order-history table-responsive">
-                <table class="table table-sm table-borderless">
-                    <thead>
-                        <tr>
-                            <th>Order Number</th>
-                            <th>Date</th>
-                            <th>Items</th>
-                            <th>Order Total</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for order in orders %}
-                        <tr>
-                            <td>
-                                <a href="{% url 'order_history' order.order_number %}" title="{{ order.order_number }}">
-                                    {{ order.order_number|truncatechars:6 }}
-                                </a>
-                            </td>
-                            <td>{{ order.date }}</td>
-                            <td>
-                                <ul class="list-unstyled">
-                                    {% for item in order.lineitems.all %}
-                                    <li class="small">
-                                        {% if item.product.has_sizes %}
-                                        Size {{ item.product.size|upper }}
-                                        {% endif %}{{ item.product.name }} x{{ item.quantity }}
-                                    </li>
-                                    {% endfor %}
-                                </ul>
-                            </td>
-                            <td>${{ order.grand_total }}</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+        <div class="col-12 col-md-6 col-lg-4 mb-5 userimage">
+            <!-- <div class="col-12 col-lg-6 userimage"> -->
+            <p class="text-muted">User Image</p>
+            <div class="text-center mt-3">
+                {% if user.userprofile.profile_picture %}
+                <img src="{{ user.userprofile.profile_picture.url }}"
+                    class="rounded-circle img-fluid responsive-profile-img" alt="Profile Picture">
+                {% else %}
+                <img src="{% static 'images/userprofile-default-img.webp.webp' %}"
+                    class="rounded-circle img-fluid responsive-profile-img" alt="Default Profile Picture">
+                {% endif %}
             </div>
         </div>
-    </div>
-    {% endblock %}
+        <div class="col-12 col-md-6 col-lg-4 mb-5">
+            <p class="text-muted">User Information</p>
+            <div class="order-history table-responsive">
+                <p><strong>First Name:</strong> {{ request.user.userprofile.first_name }}</p>
+                <p><strong>Last Name:</strong> {{ request.user.userprofile.last_name }}</p>
+                <p><strong>Email:</strong> {{ request.user.email }}</p>
+                <p><strong>Bio:</strong> {{ request.user.userprofile.bio }}</p>
+                <p><strong>Country:</strong> {{ request.user.userprofile.country }}</p>
+                <a href="#" class="btn btn-black rounded-0 text-uppercase"><i class="fas fa-user-edit"></i> Update
+                    User</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <p class="text-muted">Default Delivery Information</p>
+                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                </form>
+            </div>
+            <div class="col-12 col-lg-6">
+                <p class="text-muted">Order History</p>
+                <div class="order-history table-responsive">
+                    <table class="table table-sm table-borderless">
+                        <thead>
+                            <tr>
+                                <th>Order Number</th>
+                                <th>Date</th>
+                                <th>Items</th>
+                                <th>Order Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for order in orders %}
+                            <tr>
+                                <td>
+                                    <a href="{% url 'order_history' order.order_number %}"
+                                        title="{{ order.order_number }}">
+                                        {{ order.order_number|truncatechars:6 }}
+                                    </a>
+                                </td>
+                                <td>{{ order.date }}</td>
+                                <td>
+                                    <ul class="list-unstyled">
+                                        {% for item in order.lineitems.all %}
+                                        <li class="small">
+                                            {% if item.product.has_sizes %}
+                                            Size {{ item.product.size|upper }}
+                                            {% endif %}{{ item.product.name }} x{{ item.quantity }}
+                                        </li>
+                                        {% endfor %}
+                                    </ul>
+                                </td>
+                                <td>${{ order.grand_total }}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        {% endblock %}
 
-    {% block postloadjs %}
-    {{ block.super }}
-    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
-    {% endblock %}
+        {% block postloadjs %}
+        {{ block.super }}
+        <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
+        {% endblock %}
