--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -44,8 +44,7 @@
                 <p><strong>Last Name:</strong> {{ request.user.userprofile.last_name }}</p>
                 <p><strong>Email:</strong> {{ request.user.email }}</p>
                 <p><strong>Bio:</strong> {{ request.user.userprofile.bio }}</p>
-                <p><strong>Country:</strong> {{ request.user.userprofile.country }}</p>
-                <a href="#" class="btn btn-black rounded-0 text-uppercase"><i class="fas fa-user-edit"></i> Update
+                <a href="{% url 'profile_update' %}" class="btn btn-black rounded-0 text-uppercase"><i class="fas fa-user-edit"></i> Update
                     User</a>
             </div>
         </div>
