--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -32,7 +32,7 @@
                 <img src="{{ user.userprofile.profile_picture.url }}"
                     class="rounded-circle img-fluid responsive-profile-img" alt="Profile Picture">
                 {% else %}
-                <img src="{% static 'images/userprofile-default-img.webp.webp' %}"
+                <img src="{% static 'images/userprofile-default-img.webp' %}"
                     class="rounded-circle img-fluid responsive-profile-img" alt="Default Profile Picture">
                 {% endif %}
             </div>
