--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -20,9 +20,9 @@
 <div class="container main-content-container h-100">
     <div class="container mt-5">
         <div class="row">
-            <div class="col-12 bg-black text-white custom-div-height d-flex justify-content-center align-items-center">
+            <div class="col-12 bg-black text-white d-flex justify-content-center align-items-center">
+                <!-- <div class="col-12 bg-black text-white custom-div-height d-flex justify-content-center align-items-center"> -->
                 <div class="body-header">
-                    <!-- <h1 data-heading="i">Art<span class="hidden-letter">i</span>cles</h1> -->
                     <h1><strong>BLOG</strong></h1>
                 </div>
             </div>
