--- a/templates/base.html
+++ b/templates/base.html
@@ -164,106 +164,111 @@
     {% endblock %}
 
 
-    <!-- Footer -->
-    <footer class="container-wrapper text-white">
-        <div class="container quotes-container content-container">
-            <section class="footer">
-                <div class="row">
-                    <div class="col-12 page-header mb-4">
-                        <h2 class="text-uppercase">Stay in touch:</h2>
-                        <hr class="block-divider block-divider--short">
-                    </div>
+    <!-- FOOTER -->
+    <footer id="footer" class="mt-5">
+        <div class="container-xl">
+            <span class="logo interactive-color">GRIP E-SHOP</span>
+            <hr>
+            <div class="row row-reverse">
+                <div class="col-md-4">
+                    <h3 class="sub-title">Follow Us</h3>
+                    <ul>
+                        <li><a href="https://www.facebook.com/profile.php?id=61555501545729" rel="noopener"
+                                target="_blank" aria-label="Go to the facebook page"><i
+                                    class="fab fa-facebook-f interactive-color"></i> Facebook</a></li>
+                        <li><a href="https://www.instagram.com/" rel="noopener" target="_blank"
+                                aria-label="Go to the Instagram page"><i class="fab fa-instagram interactive-color"></i>
+                                Instagram</a></li>
+                    </ul>
                 </div>
-                <div class="row">
-                    <div class="col-12 col-md-6">
-                        <h3>Social</h3>
-                        <p>Keep up to date with all our latest offers</p>
-                        <a href="https://www.facebook.com/profile.php?id=61555501545729" target="_blank"><i
-                                class="fab fa-facebook-square"></i> Follow us on Facebook!</a>
-                        <hr>
-                        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i> Follow
-                            us on X!</a>
-                        <hr>
-                        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square"></i>
-                            Follow us on Instagram!</a>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <h2>Subscribe!</h2>
-                        <p>Get exclusive offers and discount codes by subscribing to our monthly newsletter</p>
-                        <div id="mc_embed_shell">
-                            <div id="mc_embed_signup">
-                                <form
-                                    action="https://herokuapp.us21.list-manage.com/subscribe/post?u=3efc6937c8766b4402a1c122c&amp;id=de3f4184ff&amp;f_id=006ae9e6f0"
-                                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-                                    class="validate" target="_blank">
-                                    <div id="mc_embed_signup_scroll">
-                                        <h2 class="text-black">Subscribe</h2>
-                                        <div class="indicates-required text-black"><span class="asterisk">*</span>
-                                            indicates
-                                            required</div>
-                                        <div class="mc-field-group text-black"><label for="mce-EMAIL">Email Address
-                                                <span class="asterisk">*</span></label><input type="email" name="EMAIL"
-                                                class="required email" id="mce-EMAIL" required="" value=""><span
-                                                id="mce-EMAIL-HELPERTEXT" class="helper_text"></span></div>
-                                        <div id="mce-responses" class="clear foot">
-                                            <div class="response" id="mce-error-response" style="display: none;"></div>
-                                            <div class="response" id="mce-success-response" style="display: none;">
-                                            </div>
-                                        </div>
-                                        <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                                            /* real people should not fill this in and expect good things - do not
-                                            remove this or risk form bot signups */
-                                            <input type="text" name="b_3efc6937c8766b4402a1c122c_de3f4184ff"
-                                                tabindex="-1" value="">
-                                        </div>
-                                        <div class="optionalParent">
-                                            <div class="clear foot">
-                                                <input type="submit" name="subscribe" id="mc-embedded-subscribe"
-                                                    class="button" value="Subscribe">
-                                                <p style="margin: 0px auto;"><a href="http://eepurl.com/iIxmrY"
-                                                        title="Mailchimp - email marketing made easy and fun"><span
-                                                            style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
-                                                                class="refferal_badge"
-                                                                src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
-                                                                alt="Intuit Mailchimp"
-                                                                style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
-                                                </p>
-                                            </div>
-                                        </div>
+                <div class="col-md-4">
+                    <h3 class="sub-title">Contact Us</h3>
+                    <ul>
+                        <li><i class="fas fa-phone interactive-color"></i> +353 831234567</li>
+                        <li><i class="far fa-envelope interactive-color"></i> grip@gmail.com</li>
+                        <li><i class="fas fa-home interactive-color"></i> Blackrock - Dublin</li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="sub-title">Be the first to know</h3>
+                    <p>Discover how to find the best gym gloves for You and enjoy exclusive products and offers via
+                        email</p>
+                    <!-- Mailchimp form -->
+                    <div id="mc_embed_signup">
+                        <form
+                            action="https://herokuapp.us21.list-manage.com/subscribe/post?u=3efc6937c8766b4402a1c122c&amp;id=de3f4184ff&amp;f_id=006ae9e6f0"
+                            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                            class="validate" target="_blank" novalidate>
+                            <div id="mc_embed_signup_scroll">
+                                <h4 class="interactive-color">Subscribe</h4>
+                                <div class="mc-field-group">
+                                    <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+                                    </label>
+                                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"
+                                        required>
+                                </div>
+                                <div id="mce-responses" class="clear foot">
+                                    <div class="response" id="mce-error-response" style="display:none"></div>
+                                    <div class="response" id="mce-success-response" style="display:none"></div>
+                                </div>
+                                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                        name="b_fb60582b0e4e463b6bfd0e6f8_ddd0b7edb6" tabindex="-1" value=""></div>
+                                <div class="optionalParent">
+                                    <div class="clear foot">
+                                        <input type="submit" value="Subscribe" name="subscribe"
+                                            id="mc-embedded-subscribe" class="button">
                                     </div>
-                                </form>
+                                    <div class="indicates-required"><span class="asterisk">*</span> Required</div>
+                                </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
-                    <div class="col-12">
-                        <a href="https://www.termsfeed.com/live/9859ad1d-04db-4615-bd66-3e53d4ca5354"
-                            target="_blank">Privacy Policy</a>
+                    <script src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+                    <script>
+                        (function ($) {
+                            window.fnames = new Array();
+                            window.ftypes = new Array();
+                            fnames[0] = 'EMAIL';
+                            ftypes[0] = 'email';
+                            fnames[1] = 'FNAME';
+                            ftypes[1] = 'text';
+                            fnames[2] = 'LNAME';
+                            ftypes[2] = 'text';
+                            fnames[3] = 'ADDRESS';
+                            ftypes[3] = 'address';
+                            fnames[4] = 'PHONE';
+                            ftypes[4] = 'phone';
+                            fnames[5] = 'BIRTHDAY';
+                            ftypes[5] = 'birthday';
+                        }(jQuery));
+                        var $mcj = jQuery.noConflict(true);
+                    </script>
+                    <!--End mc_embed_signup-->
+                    <div class="credid-cards-box">
+                        <span><img src="{{ MEDIA_URL }}visa_cards_images/visa_electron_card_100_x_66.webp"
+                                alt="Visa Electron Card Image"></span>
+                        <span><img src="{{ MEDIA_URL }}visa_cards_images/master_card_100_x_66.webp"
+                                alt="Master Card Image"></span>
+                        <span><img src="{{ MEDIA_URL }}visa_cards_images/visa_card_100_x_66.webp"
+                                alt="Visa Card Image"></span>
                     </div>
                 </div>
-            </section>
+                <div class="trust-company-box">
+                    <img class="trust-company" src="{{ MEDIA_URL }}visa_cards_images/trusted-brand-stamp-removed-bg.png"
+                        alt="Trust company stamp image">
+                </div>
+            </div>
+            <hr>
+            <div class="copyright">
+                <p><i class="far fa-copyright interactive-color"></i> All Rights Reserved | GRIP E-SHOP | School Project
+                    <span id="year"></span></p>
+            </div>
         </div>
     </footer>
-    <!-- /.footer -->
-    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-    <script type="text/javascript">
-        (function ($) {
-            window.fnames = new Array();
-            window.ftypes = new Array();
-            fnames[0] = 'EMAIL';
-            ftypes[0] = 'email';
-            fnames[1] = 'FNAME';
-            ftypes[1] = 'text';
-            fnames[2] = 'LNAME';
-            ftypes[2] = 'text';
-            fnames[3] = 'ADDRESS';
-            ftypes[3] = 'address';
-            fnames[4] = 'PHONE';
-            ftypes[4] = 'phone';
-            fnames[5] = 'BIRTHDAY';
-            ftypes[5] = 'birthday';
-        }(jQuery));
-        var $mcj = jQuery.noConflict(true);
-    </script>
+    <!-- END OF FOOTER -->
+
+
 </body>
 
 </html>
