Added privacy policy link

--- a/templates/base.html
+++ b/templates/base.html
@@ -264,6 +264,10 @@
                 <p><i class="far fa-copyright interactive-color"></i> All Rights Reserved | GRIP E-SHOP | School Project
                     <span id="year"></span></p>
             </div>
+            <div class="col-12">
+                <a href="https://www.termsfeed.com/live/9859ad1d-04db-4615-bd66-3e53d4ca5354" target="_blank">Privacy
+                    Policy</a>
+            </div>
         </div>
     </footer>
     <!-- END OF FOOTER -->
