--- a/templates/base.html
+++ b/templates/base.html
@@ -246,16 +246,16 @@
                     </script>
                     <!--End mc_embed_signup-->
                     <div class="credid-cards-box">
-                        <span><img src="{{ MEDIA_URL }}visa_cards_images/visa_electron_card_100_x_66.webp"
+                        <span><img src="{{ MEDIA_URL }}visa_electron_card_100_x_66.webp"
                                 alt="Visa Electron Card Image"></span>
-                        <span><img src="{{ MEDIA_URL }}visa_cards_images/master_card_100_x_66.webp"
+                        <span><img src="{{ MEDIA_URL }}master_card_100_x_66.webp"
                                 alt="Master Card Image"></span>
-                        <span><img src="{{ MEDIA_URL }}visa_cards_images/visa_card_100_x_66.webp"
+                        <span><img src="{{ MEDIA_URL }}visa_card_100_x_66.webp"
                                 alt="Visa Card Image"></span>
                     </div>
                 </div>
                 <div class="trust-company-box">
-                    <img class="trust-company" src="{{ MEDIA_URL }}visa_cards_images/trusted-brand-stamp-removed-bg.png"
+                    <img class="trust-company" src="{{ MEDIA_URL }}trusted-brand-stamp-removed-bg.png"
                         alt="Trust company stamp image">
                 </div>
             </div>
