Added feddback contact form template, css, urls, views, models, forms

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -50,8 +50,7 @@
                 Special Offers 🔥
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">NEW
-                    ARRIVALS</a>
+                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">NEW ARRIVALS</a>
                 <a href="{% url 'products' %}?category=deals" class="dropdown-item">DEALS</a>
                 <a href="{% url 'products' %}?category=clearance" class="dropdown-item">CLEARANCE</a>
                 <a href="{% url 'products' %}?category=clearance,deals,new_arrivals" class="dropdown-item">All
@@ -62,11 +61,18 @@
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                BLOG
+                ABOUT US
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
                 <a href="{% url 'blog' %}" id="blog-link" class="dropdown-item">RELATED ARTICLES</a>
+                <a href="{% url 'contact' %}" class="dropdown-item">CONTACT US</a>
             </div>
         </li>
-    </ul>
+
+        <!-- <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'contact' %}" id="support-link">
+                Support
+            </a>
+        </li>
+    </ul> -->
 </div>
