--- a/templates/base.html
+++ b/templates/base.html
@@ -248,10 +248,8 @@
                     <div class="credid-cards-box">
                         <span><img src="{{ MEDIA_URL }}visa_electron_card_100_x_66.webp"
                                 alt="Visa Electron Card Image"></span>
-                        <span><img src="{{ MEDIA_URL }}master_card_100_x_66.webp"
-                                alt="Master Card Image"></span>
-                        <span><img src="{{ MEDIA_URL }}visa_card_100_x_66.webp"
-                                alt="Visa Card Image"></span>
+                        <span><img src="{{ MEDIA_URL }}master_card_100_x_66.webp" alt="Master Card Image"></span>
+                        <span><img src="{{ MEDIA_URL }}visa_card_100_x_66.webp" alt="Visa Card Image"></span>
                     </div>
                 </div>
                 <div class="trust-company-box">
