fixed footer css for mobile device

--- a/templates/base.html
+++ b/templates/base.html
@@ -252,10 +252,10 @@
                         <span><img src="{{ MEDIA_URL }}visa_card_100_x_66.webp" alt="Visa Card Image"></span>
                     </div>
                 </div>
-                <div class="trust-company-box">
+                <!-- <div class="trust-company-box">
                     <img class="trust-company" src="{{ MEDIA_URL }}trusted-brand-stamp-removed-bg.png"
                         alt="Trust company stamp image">
-                </div>
+                </div> -->
             </div>
             <hr>
             <div class="copyright">
