--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,14 @@ body {
     font-family: 'Lato';
 }
 
+.delivery-text-color {
+    color: red;
+}
+
+.colllor {
+    color: red;
+}
+
 /* from Bulma */
 .icon {
     align-items: center;
@@ -150,6 +158,7 @@ input[name='q']::placeholder {
 }
 
 #footer .sub-title {
+    color: red;
     margin-top: 20px;
     text-align: left;
 }
@@ -200,12 +209,6 @@ input[name='q']::placeholder {
     -ms-flex-pack: center;
     justify-content: center;
 }
-
-/* .trust-company-top {
-    display: none;
-    width: 150px !important;
-    margin: 0 auto;
-} */
 
 #footer .copyright {
     padding: 5px;
