--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,19 +2,26 @@ html {
     height: 100%;
 }
 
+
 body {
     background: url('/media/octagon.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
-    font-family: 'Lato';
+    font-family: "Gloria Hallelujah", cursive;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .delivery-text-color {
-    color: red;
+    color: goldenrod;
 }
 
 .colllor {
+    color: goldenrod;
+}
+
+.colllor1 {
     color: red;
 }
 
@@ -154,6 +161,7 @@ input[name='q']::placeholder {
 }
 
 #footer .logo {
+    color: red;
     font-size: 1.1rem;
 }
 
@@ -175,7 +183,8 @@ input[name='q']::placeholder {
 #footer ul li,
 #footer ul li a,
 #footer p {
-    color: var(--light-grey);
+    /* color: var(--light-grey); */
+    color:goldenrod;
 }
 
 #footer i {
