fix some errors html validators

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,14 +79,14 @@
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
+                        <a class="text-black nav-link" href="#?" id="user-options-base" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fas fa-user fa-lg colllor1"></i></div>
                                 <p class="my-0">My Account</p>
                             </div>
                         </a>
-                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                        <div class="dropdown-menu border-0" aria-labelledby="user-options-base">
                             {% if request.user.is_authenticated %}
                             {% if request.user.is_superuser %}
                             <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
@@ -121,7 +121,7 @@
         <div class="row bg-white">
             <nav class="navbar navbar-expand-lg navbar-light w-100">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
-                    aria-controls="false" aria-label="Toggle navigation">
+                    aria-controls="main-nav" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 {% include 'includes/mobile-top-header.html' %}
@@ -161,7 +161,7 @@
     {% endblock %}
 
     {% block postloadjs %}
-    <script type="text/javascript">
+    <script>
         $('.toast').toast('show');
     </script>
     {% endblock %}
@@ -255,10 +255,6 @@
                         <span><img src="{{ MEDIA_URL }}visa_card_100_x_66.webp" alt="Visa Card Image"></span>
                     </div>
                 </div>
-                <!-- <div class="trust-company-box">
-                    <img class="trust-company" src="{{ MEDIA_URL }}trusted-brand-stamp-removed-bg.png"
-                        alt="Trust company stamp image">
-                </div> -->
             </div>
             <hr>
             <div class="copyright">
