--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -45,11 +45,11 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown"
+            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link-specials" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Special Offers 🔥
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="specials-link">
+            <div class="dropdown-menu border-0" aria-labelledby="specials-link-specials">
                 <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">NEW ARRIVALS</a>
                 <a href="{% url 'products' %}?category=deals" class="dropdown-item">DEALS</a>
                 <a href="{% url 'products' %}?category=clearance" class="dropdown-item">CLEARANCE</a>
@@ -69,4 +69,5 @@
             </div>
         </li>
 
+    </ul>
 </div>
